# example-django-mssql-docker

./: .dockerignore  .env.sample  Dockerfile  LICENSE  README.md  Taskfile.yml  docker-compose.yml  poetry.toml  pyproject.toml
app_example/: apps.py  serializers.py  urls.py  viewsets.py
app_example/migrations/: 0001_initial.py
domains/config/: __init__.py  __main__.py  gunicorn.conf.py
domains/fs/: __main__.py  dirs.py
example_django_mssql_docker/app_example/: models.py
example_django_mssql_docker/domains/config/: __init__.py
example_django_mssql_docker/project/: settings.py  urls.py
project/: settings.py
tests/integration/: test_happy.py
